--- a/Riot/Modules/Authentication/AuthenticationViewController.xib
+++ b/Riot/Modules/Authentication/AuthenticationViewController.xib
@@ -63,8 +63,8 @@
                     </constraints>
                     <color key="barTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <items>
-                        <navigationItem title="Riot" id="rj9-wP-8QS">
-                            <barButtonItem key="rightBarButtonItem" title="Register" id="Kwt-KN-aVL">
+                        <navigationItem title="Chat" id="rj9-wP-8QS">
+                            <barButtonItem key="rightBarButtonItem" id="Kwt-KN-aVL">
                                 <connections>
                                     <action selector="onButtonPressed:" destination="-1" id="nwk-aV-eBO"/>
                                 </connections>
@@ -88,7 +88,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rhx-dD-4EJ" userLabel="Content View">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="485"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chat_logo" translatesAutoresizingMaskIntoConstraints="NO" id="d8r-TX-pwX" userLabel="Welcome Image View">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="batlogo" translatesAutoresizingMaskIntoConstraints="NO" id="d8r-TX-pwX" userLabel="Welcome Image View">
                                     <rect key="frame" x="127.66666666666669" y="25" width="120" height="101"/>
                                     <accessibility key="accessibilityConfiguration" identifier="AuthenticationVCWelcomeImageView"/>
                                     <constraints>
@@ -144,7 +144,7 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gg0-TE-OGb">
                                     <rect key="frame" x="0.0" y="360" width="375" height="300"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AJ2-lJ-NUq">
+                                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AJ2-lJ-NUq">
                                             <rect key="frame" x="19" y="33" width="122" height="30"/>
                                             <accessibility key="accessibilityConfiguration" identifier="AuthenticationVCForgotPasswordButton"/>
                                             <constraints>
@@ -503,7 +503,7 @@ Clear it if you're finished using this device, or want to sign in to another acc
         </view>
     </objects>
     <resources>
-        <image name="chat_logo" width="2161.333251953125" height="1904.3333740234375"/>
+        <image name="batlogo" width="1024" height="1024"/>
         <image name="selection_untick" width="22" height="22"/>
     </resources>
 </document>
